Continued to write test for the crossover.